<resources>
    <string name="app_name">BackSeatDrivers</string>
    <string name="action_calibrate">Calibrate</string>
    <string name="calibration">Calibration</string>
    <string name="undistortion">Undistortion</string>
    <string name="comparison">Comparison</string>
    <string name="preview_mode">Preview mode</string>
    <string name="calibration_successful">Successfully calibrated!\nAvg. re-projection error:</string>
    <string name="calibration_unsuccessful">Unsuccessful calibration.\nTry again</string>
    <string name="more_samples">Please, capture more samples</string>
    <string name="calibrating">Calibrating. . .</string>
    <string name="please_wait">Please wait</string>
    <string name="original">Original</string>
    <string name="undistorted">Undistorted</string>
    <string name="mode">Mode</string>
    <string name="lane_departure">Lane Departure</string>
    <string name="skyview">Sky View</string>
    <string name="stock_image">Stock Image Test</string>
    <string name="loading_stock_image">Loading Stock Image</string>
    <string name="process_stock_image">Run Test</string>
    <string name="image_to_view">Image to View</string>
    <string name="view_undistorted">1) Undistorted</string>
    <string name="view_grayscale">2) Grayscale</string>
    <string name="view_skyview">3) Sky View</string>
    <string name="view_sobel">4) Sobel Output</string>
    <string name="view_threshold">5) Threshold Output</string>
    <string name="view_lane_markers">6) Lane Markers</string>
    <string name="view_polynomial">7) Polynomial Curve</string>
    <string name="view_position">8) Position</string>
    <string name="view_polygon">9) Polygon</string>
    <string name="view_normal">10) Normal View</string>
    <string name="view_final">11) Final Output</string>
    <string name="play_sounds">Play Sounds</string>
    <string name="pipeline_demo">Pipeline Demo</string>
</resources>
