<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/m_image_to_view"
        android:title="@string/image_to_view" >
        <menu >
            <group android:checkableBehavior="single" >
                <item
                    android:id="@+id/m_view_final"
                    android:checked="true"
                    android:title="@string/view_final" />
                <item
                    android:id="@+id/m_view_sobel"
                    android:title="@string/view_sobel" />
                <item
                    android:id="@+id/m_view_threshold"
                    android:title="@string/view_threshold" />
                <item
                    android:id="@+id/m_view_skyview"
                    android:title="@string/view_skyview" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/mode"
        android:title="@string/mode" >
        <menu >
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/mode_lane_departure"
                    android:checked="true"
                    android:title="@string/lane_departure" />
                <item
                    android:id="@+id/mode_calibration"
                    android:title="@string/calibration" />
                <item
                    android:id="@+id/mode_skyview"
                    android:title="@string/skyview" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/stock_image"
        android:title="@string/stock_image" />
    <item
        android:id="@+id/calibrate"
        android:title="@string/action_calibrate" />
    <item
        android:id="@+id/preview_mode"
        android:checked="false"
        android:title="@string/preview_mode">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/calibration"
                    android:checked="true"
                    android:title="@string/calibration" />
                <item
                    android:id="@+id/undistortion"
                    android:title="@string/undistortion" />
                <item
                    android:id="@+id/comparison"
                    android:title="@string/comparison" />
            </group>
        </menu>
    </item>
</menu>